--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
     <h1>JS</h1>
-    <script src="./js/2-codigodeunalinea.js"></script>
+    <script src="./js/suma.js"></script>
 </body>
 </html>
