--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
     <h1>JS</h1>
-    <script src="./js/4-programade2lineas.js"></script>
+    <script src="./js/5-suma2numeros.js"></script>
 </body>
 </html>
