--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
     <h1>JS</h1>
-    <script src="./js/6-2numerosmayor.js"></script>
+    <script src="./js/7-programa3numeros.js"></script>
 </body>
 </html>
