divisibles por numeros

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
     <h1>JS</h1>
-    <script src="./js/8-numerodivisible.js"></script>
+    <script src="./js/10-divisbles4num.js"></script>
 </body>
 </html>
